--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,5 +12,5 @@ prefix: "§b【抽卡系统】§e"
 # 登录提醒有次数的玩家抽卡
 remind: true
 # 抽卡、兑换、一键兑换指令异步执行（开启后会减少对应指令的卡顿）
-# 若一键兑换出现问题可关闭异步
+# 若对应指令出现问题可关闭异步
 asyn: true
