增加一键兑换cd

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #抽卡插件配置文件
 #配置文件版本
-version: '1.7'
+version: '1.12'
 #DEBUG模式，开启后将展示大部分报错
 DEBUG: false
 #开启的卡池
@@ -14,3 +14,5 @@ remind: true
 # 抽卡、兑换、一键兑换指令异步执行（开启后会减少对应指令的卡顿）
 # 若对应指令出现问题可关闭异步
 asyn: true
+# 一键兑换cd（单位：秒）
+cd: 30
