--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -22,6 +22,7 @@ lang_52: " 成功为 {0} 添加卡【{1}】{2} 张，现在他有 {3} 张"
 lang_53: " 成功为 {0} 删除卡【{1}】{2 }张，现在他有 {3} 张"
 lang_54: " 该玩家仅有 {0} 张【{1}】"
 lang_55: " 你还需要等待 {0} 秒才能一键兑换"
+lang_56: " 你还需要等待 {0} 秒才能继续抽卡"
 
 #下条必须包含 兑换 二字
 lang_29: " 你已经集齐了 {0} 套【{1}】，快去兑换§e吧!!!"
